# AsciiArt

cpp-magic-ascii-art-starter-main/: .gitignore  CMakeLists.txt  README.md
cpp-magic-ascii-art-starter-main/include/JPEGLoader/: jpegdecodertest.cpp
cpp-magic-ascii-art-starter-main/include/LodePNG/: lodepng.cpp  lodepng.h
cpp-magic-ascii-art-starter-main/src/: main.cpp
cpp-magic-ascii-art-starter-main/src/ImageLoaders/: BMPLoader.cpp  BMPLoader.h  ImageToAscii.h  JPEGLoader.cpp  JPEGLoader.h  PNGLoader.cpp  PNGLoader.h
cpp-magic-ascii-art-starter-main/src/Util/: Util.cpp  Util.h  grayscaleLevels.txt
